artifacts/test-app/virtualservice_nginx.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  gateways:
    - istio-system/ingress-gateway
  hosts:
    - zaap.nandi.sh
  http:
    - match:
        - uri:
            prefix: /test-app
      rewrite:
        uri: /
      route:
        - destination:
            host: nginx
            port:
              number: 80
